--- a/Leo.toml
+++ b/Leo.toml
@@ -5,5 +5,5 @@ description = "The sieve-of-atkin package"
 license = "MIT"
 
 [remote]
-origin = "git@github:arosboro/sieve-of-atkin"
+origin = "git@github.com:arosboro/sieve-of-atkin"
 author = "arosboro"
